# SecureCPP

./: CMakeLists.txt  README.md
include/SecureCPP/: hasher.hpp
include/securecpp/: encryptor.hpp  file_encryptor.hpp
src/: encryptor.cpp  file_encryptor.cpp  hasher.cpp  securecpp_dummy.cpp
tests/: test_encryptor.cpp  test_file_encryptor.cpp  test_hasher.cpp  test_main.cpp
